@@ -14,7 +14,8 @@ postgresql-common (189) UNRELEASED; urgency=medium
   * debian/maintscripts-functions: bump update-alternatives priority of
     version 1x to 1x0.
   * Unsupport 9.2 on apt.postgresql.org.
-  * t/140_pg_config.t: Also test /usr/bin/pg_config.libpq-dev.
+  * t/140_pg_config.t: Also test /usr/bin/pg_config.libpq-dev, and check
+    MKDIR_P and abs_top_build/srcdir in Makefile.global.
 
  -- Christoph Berg <myon@debian.org>  Fri, 10 Nov 2017 17:45:10 +0100
 
